--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
 body {
     font-size: 20px;
+    background-attachment: fixed;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
